tests/fixtures/svs-v3/invalid/duplicate-state-vector.hex
24780676071508036e646e080b7376732d76332d7465737436010314001534c918ca16070908046e6f6465080161d209d4046553f100d60101c918ca16070908046e6f6465080161d209d4046553f100d6010116031b010017204eef5880cfe937806d87e4f692dae83ff496b700e4f7c8e8a34efe3e71058ce6
